crates/spite-parser/tests/snapshots/parser_integration__tagged_templates__syntax_and_diagnostic_snapshots-4.snap
---
source: crates/spite-parser/tests/tagged_templates.rs
expression: parse_script(source).unwrap_err()
---
Diagnostic {
    kind: Syntax,
    span: Span {
        start: 6,
        end: 8,
    },
    message: "expected an expression",
}
